src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AADO__c</fullName>
        <formula>Account.Account_Development_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AADO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALink__c</fullName>
        <description>Field created for Integration, will stay hidden from the layout.</description>
        <formula>&quot;https://na31.salesforce.com/&quot;+ AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ALink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Development_Owner__c</fullName>
        <description>Field created for Integration, will stay hidden from the layout.</description>
        <formula>Account.Account_Development_Owner__r.FirstName + &quot; &quot; +  Account.Account_Development_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Development Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Field created for Integration, will stay hidden from the layout.</description>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Account_Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Account_Development_Owner__c</fullName>
        <label>Accounts Account Development Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Active_Contact_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actively_Being_Sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True/False Value for checkbox</description>
        <label>Actively Being Sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Became_MQL_Date__c</fullName>
        <description>Date that lead hit MQL criteria in Hubspot</description>
        <label>Became MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLink__c</fullName>
        <description>Field created for Integration, will stay hidden from the layout.</description>
        <formula>&quot;https://na31.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Target Company Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>10-50</fullName>
                </value>
                <value>
                    <fullName>50-200</fullName>
                </value>
                <value>
                    <fullName>200-500</fullName>
                </value>
                <value>
                    <fullName>500-1,000</fullName>
                </value>
                <value>
                    <fullName>1,000-5,000</fullName>
                </value>
                <value>
                    <fullName>5,000-10,000</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Custom_Tags__c</fullName>
        <label>Contact Custom Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName + &quot; &quot; +LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_No_Activity_Days__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <label>Contact No Activity Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Sequenced_Date__c</fullName>
        <label>Contact Sequenced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-MQL</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Timing - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>In Sequence</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Added to Existing Account - Not in Sequence</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Bad Data - No Longer at Company</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Bad Data - Other</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Bad Data - Wrong Contact Info</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Completed Sequence and Unresponsive</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted - CAS</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted - In Sequence</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - No Budget</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Not the Right Person</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Not the Right Time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Other</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Prefers Existing Solution</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Product Does Not Fit Need</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Disqualified - Unresponsive</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Contacted and Sales Qualified - New Opportunity</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Do Not Contact - Blacklisted</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Do Not Contact - Unsubscribed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Manual_Finish_and_Unresponsive</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Not Contacted and Disqualified - Not a Valid Title</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Not Contacted and Disqualified - Not in Target Market</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Not in Outbound Funnel</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_by_Role_Static__c</fullName>
        <label>Created by Role (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Prospect_Stage__c</fullName>
        <description>Cold/Not Started, Approaching, Replied, etc.</description>
        <label>Current Prospect Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Name__c</fullName>
        <description>Current Sequence Name in Outreach</description>
        <label>Current Sequence Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Start_Date__c</fullName>
        <description>Set up WFR to assign date based on when the “Actively Being Sequenced” box is checked</description>
        <label>Current Sequence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Number__c</fullName>
        <description>Number of Sequence Step</description>
        <label>Current Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Type__c</fullName>
        <description>auto_email, manual_email, call, task</description>
        <label>Current Sequence Step Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Task_Due_Date__c</fullName>
        <description>Due date of task (10/18/2016 11:28 AM)</description>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason_Detail__c</fullName>
        <inlineHelpText>Describe why a prospect is unqualified (provide as much detail as you can). If unqualified now but potentially a fit for the future, set a reminder task to re-engage at a future date.</inlineHelpText>
        <label>Disqualified Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Does Not Fit Need</fullName>
                </value>
                <value>
                    <fullName>Prefers Existing Solution</fullName>
                </value>
                <value>
                    <fullName>Not the Right Person</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Not a Valid Title</fullName>
                </value>
                <value>
                    <fullName>Not in Target Market</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Non-Sales Contact (Admin Use Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funnel_Grade__c</fullName>
        <label>Funnel Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Lifecycle_Stage__c</fullName>
        <label>HubSpot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICP_Completion_Date__c</fullName>
        <label>ICP Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IST_Data_Type__c</fullName>
        <label>IST Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Sourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Class__c</fullName>
        <label>Lead Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>AE Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Node_Account_Owner__c</fullName>
        <description>Account Owner as per SFDC assignment</description>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Node Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Company_Description__c</fullName>
        <label>Node Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Session__c</fullName>
        <label>Onboarding Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <label>Onboarding Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>Email workflow</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Sequence_Date__c</fullName>
        <description>The most recent date a contact has been pulled from the sequence.</description>
        <label>Out of Sequence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Email__c</fullName>
        <inlineHelpText>This is the breakdown of time spent on the phone and email.</inlineHelpText>
        <label>Phone/Email</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10/90</fullName>
                </value>
                <value>
                    <fullName>20/80</fullName>
                </value>
                <value>
                    <fullName>30/70</fullName>
                </value>
                <value>
                    <fullName>40/60</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>60/40</fullName>
                </value>
                <value>
                    <fullName>70/30</fullName>
                </value>
                <value>
                    <fullName>80/20</fullName>
                </value>
                <value>
                    <fullName>90/10</fullName>
                </value>
                <value>
                    <fullName>100/0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Notes__c</fullName>
        <inlineHelpText>Business needs - focus on those that your solution(s) can support 
Urgency - specific event(s) or tangible impact(s) that demonstrate(s) urgency 
Money - is it available? who controls it? how is allocation determined? 
Authority - who decides/influence</inlineHelpText>
        <label>Qualification Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <inlineHelpText>The source from which the prospect came to submit their contact information (as determined by Primary Lead Source).</inlineHelpText>
        <label>Secondary Lead Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Ads</fullName>
                </value>
                <value>
                    <fullName>Facebook Ads</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Website Referral</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Node</fullName>
                </value>
                <value>
                    <fullName>List Purchase</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Navigator</fullName>
                </value>
                <value>
                    <fullName>Intra-Account Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <description>This defines the role of the individual within the organization. This is our internal nomenclature for sales and marketing.</description>
        <label>Seniority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CxO</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Regions__c</fullName>
        <label>Target Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <inlineHelpText>This describes the meta level method for territory assignment</inlineHelpText>
        <label>Territory Segmentation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Employee Size</fullName>
                </value>
                <value>
                    <fullName>Revenue Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Reason_Detail__c</fullName>
        <inlineHelpText>Describe why a prospect is unqualified (provide as much detail as you can). If unqualified now but potentially a fit for the future, set a reminder task to re-engage at a future date.</inlineHelpText>
        <label>Unqualified Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <inlineHelpText>Not a Business Priority = No need or urgency for Node. Product Not a Fit = Not feasible solution (e.g. not SFDC customer). No Budget = Budget not in ballpark. No Authority = Not able to decide or influence decision to purchase.</inlineHelpText>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Business Priority</fullName>
                </value>
                <value>
                    <fullName>Product Not a Fit</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>No Authority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__ContactStatus__c</fullName>
        <label>Contact Status (Future Use - Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Contacted - Qualifying</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Contacted - Disqualified</fullName>
                </value>
                <value>
                    <fullName>Contacted - Incorrect Data</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__FirstAttempt__c</fullName>
        <label>First Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__First_Conversation_Date__c</fullName>
        <description>CAS First Conversation Date</description>
        <label>First Conversation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__LastAttempt__c</fullName>
        <label>Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__LastConnect__c</fullName>
        <label>Last Conversation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__List_Name__c</fullName>
        <description>CAS LIst Name</description>
        <label>List Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Most_Recent_Attempt_Disposition__c</fullName>
        <description>To store attempt disposition for each call through CAS</description>
        <label>Most Recent Attempt Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Most_Recent_Conversation_Disposition__c</fullName>
        <description>To store disposition selected by pitcher through CAS</description>
        <label>Most Recent Conversation Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>